# MindWolf

./: LLM_REALTIME_API_MIGRATION.md  index.html  package-lock.json  package.json  项目策划书.md
.qoder/quests/: ai-wolf-game-development.md  chinese-name-adjustment.md  project-build-and-error-fixing.md
.qoder/rules/: ENV.md
mindwolf/: README.md
mindwolf/src/: App.vue
mindwolf/src-tauri/: tauri.conf.json
mindwolf/src-tauri/src/: commands.rs  config.rs  game_manager.rs  lib.rs  llm.rs  replay.rs  types.rs  utils.rs
mindwolf/src-tauri/src/ai/: agent.rs  mod.rs  strategy.rs
mindwolf/src-tauri/src/database/: migrations.rs  repository.rs
mindwolf/src-tauri/src/voice/: asr.rs  audio.rs  tts.rs
mindwolf/src/stores/: game.ts
mindwolf/src/views/: Game.vue
portable/: README.md
portable/config/: config.json
scripts/: create-portable.js
src/: main.ts
src-tauri/: Cargo.toml  build.rs  resources.rc  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  config.rs  error.rs  game_engine.rs  game_manager.rs  lib.rs  llm.rs  main.rs  replay.rs  types.rs  utils.rs  windows.rs
src-tauri/src/ai/: agent.rs  nlp.rs  personality.rs  reasoning.rs  strategy.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs  repository.rs
src-tauri/src/voice/: asr.rs  audio.rs  mod.rs  tts.rs
src/api/: index.ts
src/stores/: game.ts
src/types/: index.ts
src/views/: Home.vue  Replay.vue  ReplayViewer.vue  Settings.vue
