[package]
name = "mindwolf"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mindwolf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 确保生成静态链接的独立可执行文件
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
# 启用静态链接
[profile.release.package."*"]
opt-level = "z"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "wry"], default-features = false }
tauri-plugin-opener = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots", "connect"], default-features = false }
futures-util = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
dirs = "5.0"

# Windows 便携式配置
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "processthreadsapi"] }

# 确保 WebView2 被静态链接
[package.metadata.tauri]
embedded-server = true

